--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,11 @@
+/* Developed by Prince Paraste */
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background-color: #282c34;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +15,55 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.group {
+  background-color: #111213;
+  color: white;
+  min-height: 120vh;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header--container {
+  padding: 40px;
+}
+
+.user--group--pic {
+  width: 115px;
+  border-radius: 10px;
+}
+.group--info {
+  padding: 10px 40px 10px 40px;
+  border: 0.5px solid grey;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.user {
+  color: white;
+}
+.user__name {
+  position: absolute;
+  background: #00b8ff;
+  width: 100%;
+  bottom: 0px;
+  border-radius: 0px 0px 20px 20px;
+  text-align: center;
+}
+.user__block {
+  position: relative;
+  height: 160px;
+  width: 160px;
+  border-radius: 25px;
+  overflow: hidden;
+  margin: 5px;
+  cursor: pointer;
+}
+.user__image {
+  border-radius: 20px;
+  max-width: 100%;
+  max-height: 100%;
+}
+.btn__group {
+  margin-top: 30px;
+}
+.i-block {
+  display: inline-block;
 }
